# MorganBot

./: db.json  keep_alive.py  main.py  morgan.py  pyproject.toml  readme
cogs/: admincog.py  cryptocog.py  dbcog.py  dicecog.py  gamescog.py  gencog.py
